fix: Fixed overflow err & disappear header err

--- a/src/style/_son/_footer.scss
+++ b/src/style/_son/_footer.scss
@@ -66,7 +66,7 @@ body {
             max-width: 50%;
             margin-right: 50%;
             padding-right: 0;
-            z-index: 1;
+            z-index: 2000;
             bottom: 0;
             display: block;
             font-size: rem(16px) !important;
