--- a/src/style/_son/_header.scss
+++ b/src/style/_son/_header.scss
@@ -1,8 +1,7 @@
 @use '../utils/' as *;
 
-// 스크롤 실험용
-html {
-    scroll-behavior: smooth;
+body {
+    overflow-x: none;
 }
 
 .header {
